sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value fin
 while(fin() == 0){ 
       ^