sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
 while(fin() == 0){ 
  
  for( i <- 0 to getNombreValeurs()){
    if (plusPetitQue(i,i+1)== false){
      echange(i,i+1)
    }
  }
 } 
}
